WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
140977
Fix typo in markPagesForVistedLinkStyleRecalc()
https://bugs.webkit.org/show_bug.cgi?id=140977
Summary
Fix typo in markPagesForVistedLinkStyleRecalc()
Chris Dumez
Reported
2015-01-27 19:03:39 PST
Fix typo in markPagesForVistedLinkStyleRecalc()
Attachments
Patch
(10.04 KB, patch)
2015-01-27 19:44 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(10.32 KB, patch)
2015-01-28 09:49 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2015-01-27 19:44:53 PST
Created
attachment 245508
[details]
Patch
WebKit Commit Bot
Comment 2
2015-01-28 09:41:21 PST
Comment on
attachment 245508
[details]
Patch Rejecting
attachment 245508
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-03', 'apply-attachment', '--no-update', '--non-interactive', 245508, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: 2 hunks FAILED -- saving rejects to file Source/WebKit/win/WebCoreSupport/WebVisitedLinkStore.cpp.rej patching file Source/WebKit2/WebProcess/WebPage/VisitedLinkTableController.cpp Hunk #1 FAILED at 97. Hunk #2 FAILED at 118. 2 out of 2 hunks FAILED -- saving rejects to file Source/WebKit2/WebProcess/WebPage/VisitedLinkTableController.cpp.rej Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force', '--reviewer', u'Darin Adler']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Full output:
http://webkit-queues.appspot.com/results/4556146094374912
Chris Dumez
Comment 3
2015-01-28 09:49:45 PST
Created
attachment 245548
[details]
Patch
WebKit Commit Bot
Comment 4
2015-01-28 10:09:00 PST
Comment on
attachment 245548
[details]
Patch Clearing flags on attachment: 245548 Committed
r179263
: <
http://trac.webkit.org/changeset/179263
>
WebKit Commit Bot
Comment 5
2015-01-28 10:09:07 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug