Source/WebCore/history/PageCache.h
@@ -59,7 +59,7 @@ namespace WebCore {
         int pageCount() const { return m_size; }
         WEBCORE_EXPORT int frameCount() const;
 
-        WEBCORE_EXPORT void markPagesForVistedLinkStyleRecalc();
+        WEBCORE_EXPORT void markPagesForVisitedLinkStyleRecalc();
 
         // Will mark all cached pages associated with the given page as needing style recalc.
         void markPagesForFullStyleRecalc(Page*);
